Excess.Extensions.R/Grammar/RParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.5
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from R.g4 by ANTLR 4.5

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591

using System;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.5")]
[System.CLSCompliant(false)]
public partial class RParser : Parser {
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, HEX=55, INT=56, FLOAT=57, COMPLEX=58, STRING=59, ID=60, 
		USER_OP=61, NL=62, WS=63;
	public const int
		RULE_prog = 0, RULE_expr_or_assign = 1, RULE_expr = 2, RULE_exprlist = 3, 
		RULE_formlist = 4, RULE_form = 5, RULE_sublist = 6, RULE_sub = 7;
	public static readonly string[] ruleNames = {
		"prog", "expr_or_assign", "expr", "exprlist", "formlist", "form", "sublist", 
		"sub"
	};

	private static readonly string[] _LiteralNames = {
		null, "';'", "'<-'", "'='", "'<<-'", "'[['", "']'", "'['", "'('", "')'", 
		"'::'", "':::'", "'$'", "'@'", "'^'", "'-'", "'+'", "':'", "'*'", "'/'", 
		"'>'", "'>='", "'<'", "'<='", "'=='", "'!='", "'!'", "'&'", "'&&'", "'|'", 
		"'||'", "'~'", "'->'", "'->>'", "':='", "'function'", "'{'", "'}'", "'if'", 
		"'else'", "'for'", "'in'", "'while'", "'repeat'", "'?'", "'next'", "'break'", 
		"'NULL'", "'NA'", "'Inf'", "'NaN'", "'TRUE'", "'FALSE'", "','", "'...'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, "HEX", "INT", "FLOAT", "COMPLEX", 
		"STRING", "ID", "USER_OP", "NL", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "R.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public RParser(ITokenStream input)
		: base(input)
	{
		Interpreter = new ParserATNSimulator(this,_ATN);
	}
	public partial class ProgContext : ParserRuleContext {
		public ITerminalNode Eof() { return GetToken(RParser.Eof, 0); }
		public Expr_or_assignContext[] expr_or_assign() {
			return GetRuleContexts<Expr_or_assignContext>();
		}
		public Expr_or_assignContext expr_or_assign(int i) {
			return GetRuleContext<Expr_or_assignContext>(i);
		}
		public ITerminalNode[] NL() { return GetTokens(RParser.NL); }
		public ITerminalNode NL(int i) {
			return GetToken(RParser.NL, i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_prog; } }
		public override void EnterRule(IParseTreeListener listener) {
			IRListener typedListener = listener as IRListener;
			if (typedListener != null) typedListener.EnterProg(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRListener typedListener = listener as IRListener;
			if (typedListener != null) typedListener.ExitProg(this);
		}
	}

	[RuleVersion(0)]
	public ProgContext prog() {
		ProgContext _localctx = new ProgContext(Context, State);
		EnterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 22;
			ErrorHandler.Sync(this);
			_la = TokenStream.La(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__7) | (1L << T__14) | (1L << T__15) | (1L << T__25) | (1L << T__30) | (1L << T__34) | (1L << T__35) | (1L << T__37) | (1L << T__39) | (1L << T__41) | (1L << T__42) | (1L << T__43) | (1L << T__44) | (1L << T__45) | (1L << T__46) | (1L << T__47) | (1L << T__48) | (1L << T__49) | (1L << T__50) | (1L << T__51) | (1L << HEX) | (1L << INT) | (1L << FLOAT) | (1L << COMPLEX) | (1L << STRING) | (1L << ID) | (1L << NL))) != 0)) {
				{
				State = 20;
				switch (TokenStream.La(1)) {
				case T__7:
				case T__14:
				case T__15:
				case T__25:
				case T__30:
				case T__34:
				case T__35:
				case T__37:
				case T__39:
				case T__41:
				case T__42:
				case T__43:
				case T__44:
				case T__45:
				case T__46:
				case T__47:
				case T__48:
				case T__49:
				case T__50:
				case T__51:
				case HEX:
				case INT:
				case FLOAT:
				case COMPLEX:
				case STRING:
				case ID:
					{
					State = 16; expr_or_assign();
					State = 17;
					_la = TokenStream.La(1);
					if ( !(_la==T__0 || _la==NL) ) {
					ErrorHandler.RecoverInline(this);
					}
					else {
					    Consume();
					}
					}
					break;
				case NL:
					{
					State = 19; Match(NL);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				State = 24;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
			}
			State = 25; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Expr_or_assignContext : ParserRuleContext {
		public Expr_or_assignContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expr_or_assign; } }
	 
		public Expr_or_assignContext() { }
		public virtual void CopyFrom(Expr_or_assignContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class ExpressionStatementContext : Expr_or_assignContext {
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public ExpressionStatementContext(Expr_or_assignContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IRListener typedListener = listener as IRListener;
			if (typedListener != null) typedListener.EnterExpressionStatement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRListener typedListener = listener as IRListener;
			if (typedListener != null) typedListener.ExitExpressionStatement(this);
		}
	}
	public partial class AssignmentContext : Expr_or_assignContext {
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public Expr_or_assignContext expr_or_assign() {
			return GetRuleContext<Expr_or_assignContext>(0);
		}
		public AssignmentContext(Expr_or_assignContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IRListener typedListener = listener as IRListener;
			if (typedListener != null) typedListener.EnterAssignment(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRListener typedListener = listener as IRListener;
			if (typedListener != null) typedListener.ExitAssignment(this);
		}
	}

	[RuleVersion(0)]
	public Expr_or_assignContext expr_or_assign() {
		Expr_or_assignContext _localctx = new Expr_or_assignContext(Context, State);
		EnterRule(_localctx, 2, RULE_expr_or_assign);
		int _la;
		try {
			State = 32;
			switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
			case 1:
				_localctx = new AssignmentContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 27; expr(0);
				State = 28;
				_la = TokenStream.La(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__2) | (1L << T__3))) != 0)) ) {
				ErrorHandler.RecoverInline(this);
				}
				else {
				    Consume();
				}
				State = 29; expr_or_assign();
				}
				break;
			case 2:
				_localctx = new ExpressionStatementContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 31; expr(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExprContext : ParserRuleContext {
		public ExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expr; } }
	 
		public ExprContext() { }
		public virtual void CopyFrom(ExprContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class HexLiteralContext : ExprContext {
		public ITerminalNode HEX() { return GetToken(RParser.HEX, 0); }
		public HexLiteralContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IRListener typedListener = listener as IRListener;
			if (typedListener != null) typedListener.EnterHexLiteral(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRListener typedListener = listener as IRListener;
			if (typedListener != null) typedListener.ExitHexLiteral(this);
		}
	}
	public partial class NullLiteralContext : ExprContext {
		public NullLiteralContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IRListener typedListener = listener as IRListener;
			if (typedListener != null) typedListener.EnterNullLiteral(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRListener typedListener = listener as IRListener;
			if (typedListener != null) typedListener.ExitNullLiteral(this);
		}
	}
	public partial class IfElseStatementContext : ExprContext {
		public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		public ITerminalNode[] NL() { return GetTokens(RParser.NL); }
		public ITerminalNode NL(int i) {
			return GetToken(RParser.NL, i);
		}
		public IfElseStatementContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IRListener typedListener = listener as IRListener;
			if (typedListener != null) typedListener.EnterIfElseStatement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRListener typedListener = listener as IRListener;
			if (typedListener != null) typedListener.ExitIfElseStatement(this);
		}
	}
	public partial class NextStatementContext : ExprContext {
		public NextStatementContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IRListener typedListener = listener as IRListener;
			if (typedListener != null) typedListener.EnterNextStatement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRListener typedListener = listener as IRListener;
			if (typedListener != null) typedListener.ExitNextStatement(this);
		}
	}
	public partial class ParenthesizedContext : ExprContext {
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public ParenthesizedContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IRListener typedListener = listener as IRListener;
			if (typedListener != null) typedListener.EnterParenthesized(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRListener typedListener = listener as IRListener;
			if (typedListener != null) typedListener.ExitParenthesized(this);
		}
	}
	public partial class MemberAccessContext : ExprContext {
		public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		public MemberAccessContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IRListener typedListener = listener as IRListener;
			if (typedListener != null) typedListener.EnterMemberAccess(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRListener typedListener = listener as IRListener;
			if (typedListener != null) typedListener.ExitMemberAccess(this);
		}
	}
	public partial class CompoundContext : ExprContext {
		public ExprlistContext exprlist() {
			return GetRuleContext<ExprlistContext>(0);
		}
		public ITerminalNode NL() { return GetToken(RParser.NL, 0); }
		public CompoundContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IRListener typedListener = listener as IRListener;
			if (typedListener != null) typedListener.EnterCompound(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRListener typedListener = listener as IRListener;
			if (typedListener != null) typedListener.ExitCompound(this);
		}
	}
	public partial class FloatLiteralContext : ExprContext {
		public ITerminalNode FLOAT() { return GetToken(RParser.FLOAT, 0); }
		public FloatLiteralContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IRListener typedListener = listener as IRListener;
			if (typedListener != null) typedListener.EnterFloatLiteral(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRListener typedListener = listener as IRListener;
			if (typedListener != null) typedListener.ExitFloatLiteral(this);
		}
	}
	public partial class FormulaeContext : ExprContext {
		public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		public FormulaeContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IRListener typedListener = listener as IRListener;
			if (typedListener != null) typedListener.EnterFormulae(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRListener typedListener = listener as IRListener;
			if (typedListener != null) typedListener.ExitFormulae(this);
		}
	}
	public partial class WhileStatementContext : ExprContext {
		public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		public ITerminalNode NL() { return GetToken(RParser.NL, 0); }
		public WhileStatementContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IRListener typedListener = listener as IRListener;
			if (typedListener != null) typedListener.EnterWhileStatement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRListener typedListener = listener as IRListener;
			if (typedListener != null) typedListener.ExitWhileStatement(this);
		}
	}
	public partial class IntLiteralContext : ExprContext {
		public ITerminalNode INT() { return GetToken(RParser.INT, 0); }
		public IntLiteralContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IRListener typedListener = listener as IRListener;
			if (typedListener != null) typedListener.EnterIntLiteral(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRListener typedListener = listener as IRListener;
			if (typedListener != null) typedListener.ExitIntLiteral(this);
		}
	}
	public partial class ListAccessContext : ExprContext {
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public SublistContext sublist() {
			return GetRuleContext<SublistContext>(0);
		}
		public ListAccessContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IRListener typedListener = listener as IRListener;
			if (typedListener != null) typedListener.EnterListAccess(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRListener typedListener = listener as IRListener;
			if (typedListener != null) typedListener.ExitListAccess(this);
		}
	}
	public partial class LogicalOrContext : ExprContext {
		public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		public LogicalOrContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IRListener typedListener = listener as IRListener;
			if (typedListener != null) typedListener.EnterLogicalOr(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRListener typedListener = listener as IRListener;
			if (typedListener != null) typedListener.ExitLogicalOr(this);
		}
	}
	public partial class LogicalAndContext : ExprContext {
		public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		public LogicalAndContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IRListener typedListener = listener as IRListener;
			if (typedListener != null) typedListener.EnterLogicalAnd(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRListener typedListener = listener as IRListener;
			if (typedListener != null) typedListener.ExitLogicalAnd(this);
		}
	}
	public partial class ComparisonContext : ExprContext {
		public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		public ComparisonContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IRListener typedListener = listener as IRListener;
			if (typedListener != null) typedListener.EnterComparison(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRListener typedListener = listener as IRListener;
			if (typedListener != null) typedListener.ExitComparison(this);
		}
	}
	public partial class HelpContext : ExprContext {
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public HelpContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IRListener typedListener = listener as IRListener;
			if (typedListener != null) typedListener.EnterHelp(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRListener typedListener = listener as IRListener;
			if (typedListener != null) typedListener.ExitHelp(this);
		}
	}
	public partial class ForEachStatementContext : ExprContext {
		public ITerminalNode ID() { return GetToken(RParser.ID, 0); }
		public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		public ITerminalNode NL() { return GetToken(RParser.NL, 0); }
		public ForEachStatementContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IRListener typedListener = listener as IRListener;
			if (typedListener != null) typedListener.EnterForEachStatement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRListener typedListener = listener as IRListener;
			if (typedListener != null) typedListener.ExitForEachStatement(this);
		}
	}
	public partial class SequenceContext : ExprContext {
		public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		public SequenceContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IRListener typedListener = listener as IRListener;
			if (typedListener != null) typedListener.EnterSequence(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRListener typedListener = listener as IRListener;
			if (typedListener != null) typedListener.ExitSequence(this);
		}
	}
	public partial class IdentifierContext : ExprContext {
		public ITerminalNode ID() { return GetToken(RParser.ID, 0); }
		public IdentifierContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IRListener typedListener = listener as IRListener;
			if (typedListener != null) typedListener.EnterIdentifier(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRListener typedListener = listener as IRListener;
			if (typedListener != null) typedListener.ExitIdentifier(this);
		}
	}
	public partial class AdditionContext : ExprContext {
		public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		public AdditionContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IRListener typedListener = listener as IRListener;
			if (typedListener != null) typedListener.EnterAddition(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRListener typedListener = listener as IRListener;
			if (typedListener != null) typedListener.ExitAddition(this);
		}
	}
	public partial class StringLiteralContext : ExprContext {
		public ITerminalNode STRING() { return GetToken(RParser.STRING, 0); }
		public StringLiteralContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IRListener typedListener = listener as IRListener;
			if (typedListener != null) typedListener.EnterStringLiteral(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRListener typedListener = listener as IRListener;
			if (typedListener != null) typedListener.ExitStringLiteral(this);
		}
	}
	public partial class MultiplicationContext : ExprContext {
		public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		public MultiplicationContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IRListener typedListener = listener as IRListener;
			if (typedListener != null) typedListener.EnterMultiplication(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRListener typedListener = listener as IRListener;
			if (typedListener != null) typedListener.ExitMultiplication(this);
		}
	}
	public partial class RightAssignmentContext : ExprContext {
		public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		public RightAssignmentContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IRListener typedListener = listener as IRListener;
			if (typedListener != null) typedListener.EnterRightAssignment(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRListener typedListener = listener as IRListener;
			if (typedListener != null) typedListener.ExitRightAssignment(this);
		}
	}
	public partial class NanLiteralContext : ExprContext {
		public NanLiteralContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IRListener typedListener = listener as IRListener;
			if (typedListener != null) typedListener.EnterNanLiteral(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRListener typedListener = listener as IRListener;
			if (typedListener != null) typedListener.ExitNanLiteral(this);
		}
	}
	public partial class RepeatStatementContext : ExprContext {
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public ITerminalNode[] NL() { return GetTokens(RParser.NL); }
		public ITerminalNode NL(int i) {
			return GetToken(RParser.NL, i);
		}
		public RepeatStatementContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IRListener typedListener = listener as IRListener;
			if (typedListener != null) typedListener.EnterRepeatStatement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRListener typedListener = listener as IRListener;
			if (typedListener != null) typedListener.ExitRepeatStatement(this);
		}
	}
	public partial class PowerContext : ExprContext {
		public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		public PowerContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IRListener typedListener = listener as IRListener;
			if (typedListener != null) typedListener.EnterPower(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRListener typedListener = listener as IRListener;
			if (typedListener != null) typedListener.ExitPower(this);
		}
	}
	public partial class BreakStatementContext : ExprContext {
		public BreakStatementContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IRListener typedListener = listener as IRListener;
			if (typedListener != null) typedListener.EnterBreakStatement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRListener typedListener = listener as IRListener;
			if (typedListener != null) typedListener.ExitBreakStatement(this);
		}
	}
	public partial class FunctionContext : ExprContext {
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public FormlistContext formlist() {
			return GetRuleContext<FormlistContext>(0);
		}
		public FunctionContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IRListener typedListener = listener as IRListener;
			if (typedListener != null) typedListener.EnterFunction(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRListener typedListener = listener as IRListener;
			if (typedListener != null) typedListener.ExitFunction(this);
		}
	}
	public partial class FalseLiteralContext : ExprContext {
		public FalseLiteralContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IRListener typedListener = listener as IRListener;
			if (typedListener != null) typedListener.EnterFalseLiteral(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRListener typedListener = listener as IRListener;
			if (typedListener != null) typedListener.ExitFalseLiteral(this);
		}
	}
	public partial class ComplexLiteralContext : ExprContext {
		public ITerminalNode COMPLEX() { return GetToken(RParser.COMPLEX, 0); }
		public ComplexLiteralContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IRListener typedListener = listener as IRListener;
			if (typedListener != null) typedListener.EnterComplexLiteral(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRListener typedListener = listener as IRListener;
			if (typedListener != null) typedListener.ExitComplexLiteral(this);
		}
	}
	public partial class FunctionCallContext : ExprContext {
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public SublistContext sublist() {
			return GetRuleContext<SublistContext>(0);
		}
		public FunctionCallContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IRListener typedListener = listener as IRListener;
			if (typedListener != null) typedListener.EnterFunctionCall(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRListener typedListener = listener as IRListener;
			if (typedListener != null) typedListener.ExitFunctionCall(this);
		}
	}
	public partial class InfLiteralContext : ExprContext {
